--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="save_button">Save</string>
     <string name="time_text">Time</string>
     <string name="name_text">Name</string>
+    <string name="edit_feed_text">Edit Feed</string>
 </resources>
